# conversational-rag-chatbot

./: .gitignore  1_ingestion_pipeline.py  2_retrieval_pipeline.py  3_history_aware_generation.py  README.md  main.py  pyproject.toml  requirements.txt
